Customer Courier pandas conversation aggregation commented

--- a/projects/customer-courier/Customer_Courier_Chat_Messages.ipynb
+++ b/projects/customer-courier/Customer_Courier_Chat_Messages.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "4       875        PICKING_UP          75 2022-08-07 14:55:10  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -193,8 +193,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Orders"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +262,7 @@
        "3       875       VAL"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +318,7 @@
        "4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,28 +339,30 @@
    "source": [
     "## Data Transformation\n",
     "In this part I'll create a new data from the 2 gathered ones above frame containing the following fields\n",
-    "1. order_id\n",
-    "2. city_code\n",
-    "3. first_courier_message: Timestamp of the first courier message\n",
-    "4. first_customer_message: Timestamp of the first customer\n",
+    "1. **order_id**\n",
+    "2. **city_code**\n",
+    "3. **first_courier_message**: Timestamp of the first courier message\n",
+    "4. **first_customer_message**: Timestamp of the first customer\n",
     "message\n",
-    "5. num_messages_courier: Number of messages sent by courier\n",
-    "6. num_messages_customer: Number of messages sent by\n",
+    "5. **num_messages_courier**: Number of messages sent by courier\n",
+    "6. **num_messages_customer**: Number of messages sent by\n",
     "customer\n",
-    "7. first_message_by: The first message sender (courier or customer)\n",
-    "8. conversation_started_at: Timestamp of the first message in the\n",
+    "7. **first_message_by**: The first message sender (courier or customer)\n",
+    "8. **conversation_started_at**: Timestamp of the first message in the\n",
     "conversation\n",
-    "9. first_responsetime_delay_seconds: Time (in secs) elapsed until\n",
+    "9. **first_responsetime_delay_seconds**: Time (in secs) elapsed until\n",
     "the first message was responded\n",
-    "10. last_message_time: Timestamp of the last message sent\n",
+    "10. **last_message_time**: Timestamp of the last message sent\n",
+    "11. **last_message_order_stage**: The stage of the order when the last\n",
+    "message was sent\n",
     "\n",
-    "11. last_message_order_stage: The stage of the order when the last\n",
-    "message was sent"
+    "### Merge data frames\n",
+    "The first step is to merge the messages and orders data frames."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +484,7 @@
        "4       875        PICKING_UP          75 2022-08-07 14:55:10       VAL  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,8 +495,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Order records by `order_id` and `message_sent_time`\n",
+    "Then, we order the records by `order_id` and `message_sent_time`. This will allow later to easily retrieve the first, second and last record grouped by `order_id` and ordered by their sent time."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +626,7 @@
        "2        555        PICKING_UP          21 2022-08-09 08:00:10       BCN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,8 +637,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loop over each `order_id` group\n",
+    "To build the conversations data frame, we group the merged table by `order_id` and loop over each group to extract the required fields."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -745,53 +770,61 @@
        "3 2022-08-07 14:55:10               PICKING_UP  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pprint import pprint\n",
-    "\n",
     "conversations_data: List[Dict] = []\n",
     "for order_id, group in merged_df.groupby(\"order_id\"):\n",
     "    conversation_data: Dict[str, int | str] = {}\n",
     "    conversation_data[\"order_id\"] = order_id\n",
     "    conversation_data[\"city_code\"] = group[\"city_code\"].iloc[0]\n",
+    "    # First courier message is calculated as the minimum timestamp when from_id == courier_id\n",
     "    conversation_data[\"first_courier_message\"] = group.loc[\n",
     "        group[\"courier_id\"] == group[\"from_id\"], \"message_sent_time\"\n",
     "    ].min()\n",
+    "    # First customer message is calculated as the minimum timestamp when from_id == customer_id\n",
     "    conversation_data[\"first_customer_message\"] = group.loc[\n",
     "        group[\"customer_id\"] == group[\"from_id\"], \"message_sent_time\"\n",
     "    ].min()\n",
+    "    # Number of courier message is the count of records when from_id == courier_id\n",
     "    conversation_data[\"num_messages_courier\"] = group.loc[\n",
     "        group[\"courier_id\"] == group[\"from_id\"], \"order_stage\"\n",
     "    ].count()\n",
+    "    # Number of customer message is the count of records when from_id == customer_id\n",
     "    conversation_data[\"num_messages_customer\"] = group.loc[\n",
     "        group[\"customer_id\"] == group[\"from_id\"], \"order_stage\"\n",
     "    ].count()\n",
+    "    # First message by is \"customer\" if in first record (earliest, since sorted by timestamp) from_id == customer_id, else courier\n",
     "    conversation_data[\"first_message_by\"] = (\n",
     "        \"customer\"\n",
     "        if group[\"from_id\"].iloc[0] == group[\"customer_id\"].iloc[0]\n",
     "        else \"courier\"\n",
     "    )\n",
+    "    # Conversation started at is the first record message_sent_time (the min since ordered by message_sent_time)\n",
     "    conversation_data[\"conversation_started_at\"] = group[\n",
     "        \"message_sent_time\"\n",
     "    ].iloc[0]\n",
+    "    # The first response time delay seconds is None if the order_id group contain 1 message or less\n",
     "    conversation_data[\"first_responsetime_delay_seconds\"] = None\n",
+    "    # If at least 2 messages\n",
     "    if len(group) > 1:\n",
+    "        # The first response time delay seconds is the difference between second and first record message_sent_time in seconds\n",
     "        conversation_data[\"first_responsetime_delay_seconds\"] = (\n",
     "            group[\"message_sent_time\"].iloc[1]\n",
     "            - group[\"message_sent_time\"].iloc[0]\n",
     "        ).total_seconds()\n",
+    "    # Last message time is the last record message_sent_time (the max since ordered by message_sent_time)\n",
     "    conversation_data[\"last_message_time\"] = group[\"message_sent_time\"].iloc[\n",
     "        -1\n",
     "    ]\n",
+    "    # Last message order stage is the last record order_stage (last record in time since ordered by message_sent_time)\n",
     "    conversation_data[\"last_message_order_stage\"] = group[\"order_stage\"].iloc[\n",
     "        -1\n",
     "    ]\n",
     "    conversations_data.append(conversation_data)\n",
-    "    # pprint(conversation_data)\n",
     "customer_courier_conversations = pd.DataFrame(conversations_data)\n",
     "customer_courier_conversations.head()"
    ]
