Business monitoring ticket; Fill table with missing new and solved statuses

--- a/projects/business-monitoring-tickets/business-monitoring-tickets-explore.ipynb
+++ b/projects/business-monitoring-tickets/business-monitoring-tickets-explore.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "4  2024-04-19T13:52:20Z  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "[16410 rows x 5 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "4 2024-04-19 13:52:20+00:00  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "753"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
     "if not database_exists(engine.url):\n",
     "    create_database(engine.url)\n",
     "\n",
-    "df_tickets.to_sql(name=\"tickets\", con=engine, if_exists=\"replace\")"
+    "df_tickets.to_sql(name=\"tickets\", index=False, con=engine, if_exists=\"replace\")"
    ]
   },
   {
