--- a/projects/business-monitoring-tickets/business-monitoring-tickets-explore.ipynb
+++ b/projects/business-monitoring-tickets/business-monitoring-tickets-explore.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Business monitoring tickets Analysis\n",
-    "This Notebook briefly analyzes the dataset found under `./dataset`\n",
+    "# Business monitoring tickets analysis\n",
+    "This Notebook makes an exploratory analysis the dataset found under `./dataset/DATASET.csv`\n",
     "\n",
     "## Data Gathering\n",
     "Load the local csv file inside a Pandas `DataFrame`."
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The tickets data set has 88753 players with 5 variables.\n"
+      "The tickets data set has 88753 records with 5 variables.\n"
      ]
     },
     {
@@ -112,7 +112,7 @@
        "4  2024-04-19T13:52:20Z  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,14 +122,14 @@
     "\n",
     "df_tickets = pd.read_csv(f\"dataset/DATASET.csv\")\n",
     "print(\n",
-    "    f\"The tickets data set has {len(df_tickets)} players with {df_tickets.shape[1]} variables.\"\n",
+    "    f\"The tickets data set has {len(df_tickets)} records with {df_tickets.shape[1]} variables.\"\n",
     ")\n",
     "df_tickets.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -160,15 +160,15 @@
    "metadata": {},
    "source": [
     "## Data Assessment and Cleaning\n",
-    "In this part, we'll perform parallel assessment and cleaning steps on the data sets.\n",
+    "In this part, we'll perform parallel assessment and cleaning steps on the data set.\n",
     "\n",
     "### `NaN`\n",
-    "Let's first check if we have any `Null` or `NaN` values in the data set."
+    "Let's first check if we have any `Null` values in the data set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -347,13 +347,12 @@
        "[16410 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df_tickets.isnull()\n",
     "df_tickets[df_tickets.isnull().any(axis=1)]"
    ]
   },
@@ -361,7 +360,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems the `NaN` are right there since the `VALUE_PREVIOUS_VALUE` is not defined for tickets with `VALUE_STATUS=='new'`\n",
+    "It seems the `Null` are right there since the `VALUE_PREVIOUS_VALUE` is not defined for tickets with `VALUE_STATUS=='new'`.\n",
+    "\n",
+    "Since this is the desired behavior, it's not needed to remove or impute the `Null` values.\n",
     "\n",
     "### Data types\n",
     "The `Updater_id` should be casted to `int` instead of `float`.\n",
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +494,7 @@
        "4 2024-04-19 13:52:20+00:00  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,17 +507,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Export to SQL DB"
+    "## Export to SQL DB\n",
+    "Once the data frame is cleaned and ready for the SQL analysis (done in the `sql` folder), it is sent to a Postgresql database."
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +522,7 @@
        "753"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,13 +539,6 @@
     "\n",
     "df_tickets.to_sql(name=\"tickets\", index=False, con=engine, if_exists=\"replace\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
