Renaming of folders and files New Software migration project

--- a/projects/finance_intervention_project/Clean_Business_Case_Data.ipynb
+++ b/projects/finance_intervention_project/Clean_Business_Case_Data.ipynb
@@ -19,7 +19,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "Case_Data_Analyst_xlsx = pd.ExcelFile(\"Tableau_Business_Case_Data_Analyst_July_2024_orig.xlsx\")"
+    "Case_Data_Analyst_xlsx = pd.ExcelFile(\n",
+    "    \"dataset/Tableau_Business_Case_Data_Analyst_July_2024_orig.xlsx\"\n",
+    ")"
    ]
   },
   {
@@ -506,7 +508,9 @@
     }
    ],
    "source": [
-    "project_metadata = pd.read_excel(Case_Data_Analyst_xlsx, sheet_name=\"Project Metadata\")\n",
+    "project_metadata = pd.read_excel(\n",
+    "    Case_Data_Analyst_xlsx, sheet_name=\"Project Metadata\"\n",
+    ")\n",
     "project_metadata.head()"
    ]
   },
@@ -542,7 +546,9 @@
    "outputs": [],
    "source": [
     "# Split \"All Interventions\" around \", \" and save the list in \"Intervention\"\n",
-    "dataset_cleaned[\"Intervention\"] = dataset_cleaned[\"All Interventions\"].str.split(\",\")\n",
+    "dataset_cleaned[\"Intervention\"] = dataset_cleaned[\n",
+    "    \"All Interventions\"\n",
+    "].str.split(\",\")\n",
     "\n",
     "# Unpivot/explode the \"Intervention\" cells into multiple rows (one per value in the split list)\n",
     "dataset_cleaned = dataset_cleaned.explode(\"Intervention\")\n",
@@ -835,7 +841,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_cleaned[\"Intervention\"] = dataset_cleaned[\"Intervention\"].str.lstrip(\" \")"
+    "dataset_cleaned[\"Intervention\"] = dataset_cleaned[\"Intervention\"].str.lstrip(\n",
+    "    \" \"\n",
+    ")"
    ]
   },
   {
@@ -887,7 +895,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert dataset_cleaned[dataset_cleaned[\"Intervention\"].str.startswith(\" \")].shape[0] == 0"
+    "assert (\n",
+    "    dataset_cleaned[dataset_cleaned[\"Intervention\"].str.startswith(\" \")].shape[\n",
+    "        0\n",
+    "    ]\n",
+    "    == 0\n",
+    ")"
    ]
   },
   {
@@ -1077,7 +1090,9 @@
    ],
    "source": [
     "taxonomy_cleaned = taxonomy.copy()\n",
-    "intervention_idx = taxonomy_cleaned[taxonomy_cleaned[\"First Order Code\"] == \"Interventions\"].index[0]\n",
+    "intervention_idx = taxonomy_cleaned[\n",
+    "    taxonomy_cleaned[\"First Order Code\"] == \"Interventions\"\n",
+    "].index[0]\n",
     "print(intervention_idx)"
    ]
   },
@@ -1095,7 +1110,9 @@
     }
    ],
    "source": [
-    "outcomes_idx = taxonomy_cleaned[taxonomy_cleaned[\"First Order Code\"] == \"Outcomes\"].index[0]\n",
+    "outcomes_idx = taxonomy_cleaned[\n",
+    "    taxonomy_cleaned[\"First Order Code\"] == \"Outcomes\"\n",
+    "].index[0]\n",
     "print(outcomes_idx)"
    ]
   },
@@ -1227,7 +1244,7 @@
     }
    ],
    "source": [
-    "taxonomy_cleaned = taxonomy_cleaned.iloc[(intervention_idx + 1): outcomes_idx]\n",
+    "taxonomy_cleaned = taxonomy_cleaned.iloc[(intervention_idx + 1) : outcomes_idx]\n",
     "taxonomy_cleaned"
    ]
   },
@@ -1388,7 +1405,9 @@
    "source": [
     "first_order_exists_mask = taxonomy_cleaned[\"First Order Code\"].notna()\n",
     "print(first_order_exists_mask)\n",
-    "taxonomy_cleaned.loc[first_order_exists_mask, [\"Second Order Code\", \"Third Order Code\"]] = taxonomy_cleaned.loc[first_order_exists_mask, \"First Order Code\"]\n",
+    "taxonomy_cleaned.loc[\n",
+    "    first_order_exists_mask, [\"Second Order Code\", \"Third Order Code\"]\n",
+    "] = taxonomy_cleaned.loc[first_order_exists_mask, \"First Order Code\"]\n",
     "taxonomy_cleaned"
    ]
   },
@@ -1546,7 +1565,9 @@
    "source": [
     "second_order_exists_mask = taxonomy_cleaned[\"Second Order Code\"].notna()\n",
     "print(second_order_exists_mask)\n",
-    "taxonomy_cleaned.loc[second_order_exists_mask, \"Third Order Code\"] = taxonomy_cleaned.loc[second_order_exists_mask, \"Second Order Code\"]\n",
+    "taxonomy_cleaned.loc[second_order_exists_mask, \"Third Order Code\"] = (\n",
+    "    taxonomy_cleaned.loc[second_order_exists_mask, \"Second Order Code\"]\n",
+    ")\n",
     "taxonomy_cleaned"
    ]
   },
@@ -1572,7 +1593,7 @@
     }
    ],
    "source": [
-    "taxonomy_cleaned.fillna(method='ffill', inplace=True)"
+    "taxonomy_cleaned.fillna(method=\"ffill\", inplace=True)"
    ]
   },
   {
@@ -1590,10 +1611,14 @@
    "outputs": [],
    "source": [
     "# dataset_cleaned.to_excel(\"Tableau_Business_Case_Data_Analyst_July_2024_dataset_cleaned.xlsx\", sheet_name=\"Dataset\", index=False)\n",
-    "with pd.ExcelWriter(\"Tableau_Business_Case_Data_Analyst_July_2024_cleaned.xlsx\") as excel_writer:\n",
+    "with pd.ExcelWriter(\n",
+    "    \"dataset/Tableau_Business_Case_Data_Analyst_July_2024_cleaned.xlsx\"\n",
+    ") as excel_writer:\n",
     "    dataset_cleaned.to_excel(excel_writer, sheet_name=\"Dataset\", index=False)\n",
     "    taxonomy_cleaned.to_excel(excel_writer, sheet_name=\"Taxonomy\", index=False)\n",
-    "    project_metadata.to_excel(excel_writer, sheet_name=\"Project Metadata\", index=False)"
+    "    project_metadata.to_excel(\n",
+    "        excel_writer, sheet_name=\"Project Metadata\", index=False\n",
+    "    )"
    ]
   },
   {
