Software migration Jupyter Notebook completed

--- a/projects/software_migration/Software_Migration_Exploratory_Analysis.ipynb
+++ b/projects/software_migration/Software_Migration_Exploratory_Analysis.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "4  Language     en_us     en-US"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "4  01:56:34            71  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "4 0 days 01:56:34            71  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "      <td>1</td>\n",
        "      <td>Channel1</td>\n",
        "      <td>en-US</td>\n",
-       "      <td>Area=account;New=true</td>\n",
+       "      <td>area=Accounting;New=true</td>\n",
        "      <td>0 days 01:23:14</td>\n",
        "      <td>57</td>\n",
        "    </tr>\n",
@@ -503,7 +503,7 @@
        "      <td>1</td>\n",
        "      <td>Channel1</td>\n",
        "      <td>en-US</td>\n",
-       "      <td>Area=account;New=true</td>\n",
+       "      <td>area=Accounting;New=true</td>\n",
        "      <td>0 days 00:13:04</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
@@ -512,7 +512,7 @@
        "      <td>1</td>\n",
        "      <td>Channel2</td>\n",
        "      <td>en-US</td>\n",
-       "      <td>Area=finance;New=false</td>\n",
+       "      <td>area=Finance;New=false</td>\n",
        "      <td>0 days 00:37:21</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
@@ -521,7 +521,7 @@
        "      <td>2</td>\n",
        "      <td>Channel3</td>\n",
        "      <td>es-ES</td>\n",
-       "      <td>Area=finance;Premium=premium-user;New=false</td>\n",
+       "      <td>area=Finance;premium=VIP_User;New=false</td>\n",
        "      <td>0 days 03:01:47</td>\n",
        "      <td>254</td>\n",
        "    </tr>\n",
@@ -530,7 +530,7 @@
        "      <td>3</td>\n",
        "      <td>Channel2</td>\n",
        "      <td>es-ES</td>\n",
-       "      <td>Area=customer;New=false</td>\n",
+       "      <td>area=Customer_Care;New=false</td>\n",
        "      <td>0 days 01:56:34</td>\n",
        "      <td>71</td>\n",
        "    </tr>\n",
@@ -539,12 +539,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   id   Channel Language                                 CustomFields  \\\n",
-       "0   1  Channel1    en-US                        Area=account;New=true   \n",
-       "1   1  Channel1    en-US                        Area=account;New=true   \n",
-       "2   1  Channel2    en-US                       Area=finance;New=false   \n",
-       "3   2  Channel3    es-ES  Area=finance;Premium=premium-user;New=false   \n",
-       "4   3  Channel2    es-ES                      Area=customer;New=false   \n",
+       "   id   Channel Language                             CustomFields  \\\n",
+       "0   1  Channel1    en-US                 area=Accounting;New=true   \n",
+       "1   1  Channel1    en-US                 area=Accounting;New=true   \n",
+       "2   1  Channel2    en-US                   area=Finance;New=false   \n",
+       "3   2  Channel3    es-ES  area=Finance;premium=VIP_User;New=false   \n",
+       "4   3  Channel2    es-ES             area=Customer_Care;New=false   \n",
        "\n",
        "         Duration  PointsGained  \n",
        "0 0 days 01:23:14            57  \n",
@@ -554,25 +554,328 @@
        "4 0 days 01:56:34            71  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "migrated_data_df = clean_data_to_migrate_df.copy()\n",
-    "for field in migration_mapping_df[\"Field\"].unique():\n",
-    "    field_mapping_df = migration_mapping_df[\n",
-    "        migration_mapping_df[\"Field\"] == field\n",
-    "    ]\n",
-    "    # print(field_mapping_df)\n",
-    "    mapping_dict: Dict[str, str] = {\n",
-    "        row[\"SoftwareA\"]: row[\"SoftwareB\"]\n",
-    "        for _, row in field_mapping_df.iterrows()\n",
-    "    }\n",
-    "    # print(mapping_dict)\n",
-    "    migrated_data_df[field] = migrated_data_df[field].replace(mapping_dict)\n",
+    "\n",
+    "for _, row in migration_mapping_df.iterrows():\n",
+    "    field = row[\"Field\"]\n",
+    "    if field == \"CustomFields\":\n",
+    "        migrated_data_df[field] = migrated_data_df[field].str.replace(\n",
+    "            row[\"SoftwareA\"], row[\"SoftwareB\"]\n",
+    "        )\n",
+    "    else:\n",
+    "        migrated_data_df[field] = migrated_data_df[field].replace(\n",
+    "            row[\"SoftwareA\"], row[\"SoftwareB\"]\n",
+    "        )\n",
     "migrated_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New requirements\n",
+    "We're required to take into account 2 new requirements\n",
+    "### Group same dimension\n",
+    "Let's group the row with the same `id`, `Channel`, `Language` and `CustomFields` dimension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Language</th>\n",
+       "      <th>CustomFields</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>PointsGained</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Channel1</td>\n",
+       "      <td>en-US</td>\n",
+       "      <td>area=Accounting;New=true</td>\n",
+       "      <td>0 days 01:36:18</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Channel2</td>\n",
+       "      <td>en-US</td>\n",
+       "      <td>area=Finance;New=false</td>\n",
+       "      <td>0 days 00:37:21</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Channel3</td>\n",
+       "      <td>es-ES</td>\n",
+       "      <td>area=Finance;premium=VIP_User;New=false</td>\n",
+       "      <td>0 days 03:01:47</td>\n",
+       "      <td>254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Channel2</td>\n",
+       "      <td>es-ES</td>\n",
+       "      <td>area=Customer_Care;New=false</td>\n",
+       "      <td>0 days 01:56:34</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id   Channel Language                             CustomFields  \\\n",
+       "0   1  Channel1    en-US                 area=Accounting;New=true   \n",
+       "1   1  Channel2    en-US                   area=Finance;New=false   \n",
+       "2   2  Channel3    es-ES  area=Finance;premium=VIP_User;New=false   \n",
+       "3   3  Channel2    es-ES             area=Customer_Care;New=false   \n",
+       "\n",
+       "         Duration  PointsGained  \n",
+       "0 0 days 01:36:18            69  \n",
+       "1 0 days 00:37:21            30  \n",
+       "2 0 days 03:01:47           254  \n",
+       "3 0 days 01:56:34            71  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_data_df = migrated_data_df.groupby(\n",
+    "    [\"id\", \"Channel\", \"Language\", \"CustomFields\"], as_index=False\n",
+    ").sum()\n",
+    "\n",
+    "grouped_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TotalPointsGained</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    TotalPointsGained\n",
+       "id                   \n",
+       "1                  99\n",
+       "2                 254\n",
+       "3                  71"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_points_df = grouped_data_df.groupby(\"id\").agg(\n",
+    "    TotalPointsGained=(\"PointsGained\", \"sum\")\n",
+    ")\n",
+    "total_points_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Language</th>\n",
+       "      <th>CustomFields</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>PointsGained</th>\n",
+       "      <th>TotalPointsGained</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Channel1</td>\n",
+       "      <td>en-US</td>\n",
+       "      <td>area=Accounting;New=true</td>\n",
+       "      <td>0 days 01:36:18</td>\n",
+       "      <td>69</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Channel2</td>\n",
+       "      <td>en-US</td>\n",
+       "      <td>area=Finance;New=false</td>\n",
+       "      <td>0 days 00:37:21</td>\n",
+       "      <td>30</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Channel3</td>\n",
+       "      <td>es-ES</td>\n",
+       "      <td>area=Finance;premium=VIP_User;New=false</td>\n",
+       "      <td>0 days 03:01:47</td>\n",
+       "      <td>254</td>\n",
+       "      <td>254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Channel2</td>\n",
+       "      <td>es-ES</td>\n",
+       "      <td>area=Customer_Care;New=false</td>\n",
+       "      <td>0 days 01:56:34</td>\n",
+       "      <td>71</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id   Channel Language                             CustomFields  \\\n",
+       "0   1  Channel1    en-US                 area=Accounting;New=true   \n",
+       "1   1  Channel2    en-US                   area=Finance;New=false   \n",
+       "2   2  Channel3    es-ES  area=Finance;premium=VIP_User;New=false   \n",
+       "3   3  Channel2    es-ES             area=Customer_Care;New=false   \n",
+       "\n",
+       "         Duration  PointsGained  TotalPointsGained  \n",
+       "0 0 days 01:36:18            69                 99  \n",
+       "1 0 days 00:37:21            30                 99  \n",
+       "2 0 days 03:01:47           254                254  \n",
+       "3 0 days 01:56:34            71                 71  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_data_df = grouped_data_df.merge(total_points_df, how=\"left\", on=\"id\")\n",
+    "final_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Exportation\n",
+    "Let's save the final data set into a csv file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_data_df.to_csv(\"dataset/migrated_data.csv\", index=False)"
    ]
   }
  ],
