--- a/projects/customer_transactions/data-exploration.ipynb
+++ b/projects/customer_transactions/data-exploration.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "4    1983-11-17      ES            1         21.25  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "4    1983-11-17      ES            1         21.25  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,19 +364,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Variable name\n",
+    "To facilitate the SQL queries, it's better to remove the spaces in the variable names.\n",
+    "\n",
+    "I'll replace the spaces with `_`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column            Non-Null Count  Dtype         \n",
+      "---  ------            --------------  -----         \n",
+      " 0   Customer_ID       10000 non-null  int64         \n",
+      " 1   Transaction_Date  10000 non-null  datetime64[ns]\n",
+      " 2   Brand_Name        10000 non-null  object        \n",
+      " 3   Sector            10000 non-null  object        \n",
+      " 4   Gender            4223 non-null   object        \n",
+      " 5   Date_of_Birth     3953 non-null   datetime64[ns]\n",
+      " 6   Country           9328 non-null   object        \n",
+      " 7   No_of_Scans       10000 non-null  int64         \n",
+      " 8   Amount_Spent      10000 non-null  float64       \n",
+      "dtypes: datetime64[ns](2), float64(1), int64(2), object(4)\n",
+      "memory usage: 703.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Dict\n",
+    "\n",
+    "renaming_map: Dict[str, str] = {}\n",
+    "for column in df_transactions:\n",
+    "    renaming_map[str(column)] = str(column).replace(\" \", \"_\")\n",
+    "\n",
+    "df_transactions.rename(columns=renaming_map, inplace=True)\n",
+    "df_transactions.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Export to SQL DB\n",
     "Once the data frame is cleaned and ready for the SQL analysis (done in the `sql` folder), it is sent to a Postgresql database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import json\n",
-    "from typing import Dict\n",
     "\n",
     "# Load secrets\n",
     "secret_file: Path = Path.home() / \".secrets.json\"\n",
@@ -386,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -395,21 +443,27 @@
        "10000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sqlalchemy import create_engine\n",
-    "from sqlalchemy_utils import database_exists, create_database\n",
+    "from sqlalchemy_utils import database_exists, create_database, drop_database\n",
     "from urllib.parse import quote_plus\n",
     "\n",
+    "user: str = mysql_secrets[\"user\"]\n",
+    "password: str = quote_plus(mysql_secrets[\"password\"])\n",
+    "database_name = \"customer_transactions\"\n",
     "engine = create_engine(\n",
-    "    f\"mysql+pymysql://{mysql_secrets[\"user\"]}:{quote_plus(mysql_secrets[\"password\"])}@localhost/customer_transactions\"\n",
+    "    f\"mysql+pymysql://{user}:{password}@localhost/{database_name}\"\n",
     ")\n",
-    "if not database_exists(engine.url):\n",
-    "    create_database(engine.url)\n",
+    "\n",
+    "# Drop database if it already exists\n",
+    "if database_exists(engine.url):\n",
+    "    drop_database(engine.url)\n",
+    "create_database(engine.url)\n",
     "\n",
     "df_transactions.to_sql(\n",
     "    name=\"transactions\", index=False, con=engine, if_exists=\"replace\"\n",
